Added user count and download user details

--- a/portal.html
+++ b/portal.html
@@ -27,6 +27,16 @@
 
         <div class="holder">
 
+            <p>Number of users</p>
+
+            <h1 id="notificationCount">Loading</h1>
+
+            <div class="download-notification">
+
+                <a download="Details.csv" id="usersDetailsDownload">Download List of Users</a>
+
+            </div>
+
             <input type="text" placeholder="Enter Title" id="title-text-field">
 
             <input type="text" placeholder="Enter body" id="body-text-field">
