--- a/portal.html
+++ b/portal.html
@@ -37,6 +37,22 @@
 
             </div>
 
+						<h1>Add links</h1>
+
+            <input type="text" placeholder="Enter Title" id="title-text-field-links">
+
+            <input type="text" placeholder="Enter body" id="body-text-field-links">
+
+            <input type="text" placeholder="Enter Url" id="url-text-field-links">
+
+						<div class="button" id="store-links" href=/notifs/store?token>Create new link</div>
+
+
+						<br>
+						<br>
+
+						<h1> Send Notifications </h1>
+
             <input type="text" placeholder="Enter Title" id="title-text-field">
 
             <input type="text" placeholder="Enter body" id="body-text-field">
